donation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-donation-service
  namespace: donation-service
spec:
  selector:
    app: app-donation-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
